fix navbar on mobile, for real this time

--- a/css/beasties-style.css
+++ b/css/beasties-style.css
@@ -41,7 +41,7 @@ a:hover {
     text-align: left;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 45em) {
     .beastie-grid {
         display: flex;
         flex-direction: column;
