--- a/css/quotes-style.css
+++ b/css/quotes-style.css
@@ -3,7 +3,7 @@ button {
     background: black;
     border: none;
     padding: 0.75em;
-    font-size: 1.25em;
+    font-size: 1em;
     border-radius: 0.5em;
     color: white;
 }
@@ -18,10 +18,4 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-@media only screen and (max-width: 1000px) {
-    button {
-        font-size: 1em;
-    }
 }
